# Swan-IVP

./: .gitignore  CMakeLists.txt  Kayak Test Procedure.odt  Kayak_SplitControl.ino  README.md  build.sh
admin/: build.sh
arduino/: Kayak_SplitControl.ino  README  uploadArduino.sh
arduino/Kayak_SplitControl/: Kayak_SplitControl.ino  arduino_Kayak_SplitControl_Kayak_SplitControl.ino
missions/IMUTest/: IMUTest.moos  clean.sh
missions/alder/: alder.bhv  alder.moos  alder.moos++
missions/labTest/: kayak.bhv  kayak.moos  shoreside.moos
missions/lakePalmer/: lakePalmer.bhv  lakePalmer.info  lakePalmer.moos  launch.sh
missions/lakeside_singleWaypoint/: kayak.moos  launchKayak.sh  launchShoreside.sh  shoreside.moos
missions/motorTest/: alder.moos  launch.sh  motorTest.moos
missions/viewer/: alder.moos  lakePalmer.info  lakePalmerViewer.moos
moos-ivp-extend/: CMakeLists.txt
scripts/: moos-ivp-setup.sh
src/: CMakeLists.txt
src/MotorControl/: CMakeLists.txt  MotorControl.h  MotorControl.moos  main.cpp
src/iGPS/: CMakeLists.txt  GPS.cpp  GPS.h  GPS_Info.cpp  GPS_Info.h  Garmin19x.cpp  Garmin19x.h  garminTest.cpp  iGPS.moos  main.cpp
src/iGPS/NemaToad/nmeaparse/: GPSService.h
src/iIMU/: CMakeLists.txt  IMU.cpp  IMU.h  IMUTest.moos  IMU_Info.cpp  IMU_Info.h  bno055.c  bno055.h  bno055_support.c  iIMU.moos  main.cpp  test.cpp
src/iMotorController/: CMakeLists.txt  MotorController.cpp  MotorController.h  MotorController_Info.cpp  MotorController_Info.h  iMotorController.moos  main.cpp
src/lib_Hardware/: CMakeLists.txt  SyncSerialPort.cpp  SyncSerialPort.hpp
src/pLocalization/: CMakeLists.txt  Localization.cpp  Localization.h  Localization_Info.cpp  Localization_Info.h  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
